@@ -1,3 +1,8 @@
+2005-12-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* src/: Various splits can now be easily created for the
+	Reuters21578 data set.
+
 2005-12-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* Updated documentation
